# Alpamayo-MPC

./: .gitignore  Dockerfile  README.md  SETUP_NOTES.md  collect_dataset.py
alpasim/: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .license-header.txt  .pre-commit-config.yaml  AGENTS.md  README.md  mypy.ini  pyproject.toml  setup_local_env.sh
alpasim/data/: README.md  auto-init.sh  download_vavam_assets.sh
alpasim/data/scenes/: README.md  sim_scenes.csv  sim_scenes_2602.csv  sim_suites.csv
alpasim/docs/: DATA_PIPELINE.md  DESIGN.md  MANUAL_DRIVER.md  ONBOARDING.md  OPERATIONS.md  PLUGIN_SYSTEM.md  TUTORIAL.md
alpasim/plugins/transfuser_driver/: pyproject.toml
alpasim/plugins/transfuser_driver/alpasim_transfuser/: __init__.py  transfuser_impl.py  transfuser_model.py
alpasim/plugins/transfuser_driver/alpasim_transfuser/configs/: __init__.py
alpasim/plugins/transfuser_driver/tests/: test_transfuser_batched.py
alpasim/src/controller/: README.md  pyproject.toml
alpasim/src/controller/alpasim_controller/: __init__.py  server.py  system.py  system_manager.py
alpasim/src/controller/alpasim_controller/mpc_impl/: __init__.py
alpasim/src/controller/benchmark/: README.md  __init__.py  __main__.py  compare.py  runner.py  trajectories.py
alpasim/src/controller/tests/: test_create_system_registry.py  test_mpc_controller.py  test_system.py
alpasim/src/controller/tests/mpc_impl/: __init__.py
alpasim/src/driver/: pyproject.toml
alpasim/src/driver/configs/: manual.yaml
alpasim/src/driver/src/alpasim_driver/: __main__.py  frame_cache.py  main.py  navigation.py  rectification.py  schema.py
alpasim/src/eval/: .release.json  README.md  pyproject.toml
alpasim/src/eval/src/eval/: asl_loader.py  data.py  main.py  metadata.py  reeval.py  runtime_evaluator.py  scenario_evaluator.py  schema.py  video_data.py  video_reasoning_overlay_utils.py
alpasim/src/eval/tests/: conftest.py  test_accumulator.py  test_asl_loader.py  test_processing.py  test_reeval.py
alpasim/src/grpc/alpasim_grpc/v0/: controller.proto  egodriver.proto  logging.proto  physics.proto  runtime.proto
alpasim/src/physics/: pyproject.toml
alpasim/src/physics/alpasim_physics/: server.py
alpasim/src/plugins/: pyproject.toml
alpasim/src/plugins/alpasim_plugins/: __init__.py  info.py  plugins.py
alpasim/src/plugins/tests/: test_info.py  test_plugins.py
alpasim/src/runtime/: .pre-commit-config.yaml  README.md  pyproject.toml  read_logs.ipynb
alpasim/src/runtime/alpasim_runtime/: address_pool.py  broadcaster.py  config.py  endpoints.py  event_loop.py  event_loop_idle_profiler.py  runtime_context.py  types.py  unbound_rollout.py  validation.py
alpasim/src/runtime/alpasim_runtime/daemon/: __init__.py  app.py  engine.py  request_store.py  scheduler.py  servicer.py
alpasim/src/runtime/alpasim_runtime/events/: base.py  camera.py  controller.py  physics.py  policy.py  state.py  step.py  traffic.py
alpasim/src/runtime/alpasim_runtime/replay_services/: README.md  asl_reader.py  controller_replay_service.py  driver_replay_service.py  physics_replay_service.py  sensorsim_replay_service.py
alpasim/src/runtime/alpasim_runtime/services/: controller_service.py  driver_service.py  physics_service.py  sensorsim_service.py  service_base.py  session_configs.py
alpasim/src/runtime/alpasim_runtime/simulate/: __main__.py
alpasim/src/runtime/alpasim_runtime/telemetry/: metrics_analysis.ipynb  plot_metrics.py  rpc_wrapper.py  telemetry_context.py
alpasim/src/runtime/alpasim_runtime/worker/: artifact_cache.py  ipc.py  main.py  runtime.py
alpasim/src/runtime/tests/: conftest.py  fixtures.py  test_address_pool.py  test_asl_replay.py  test_config.py  test_daemon_engine.py  test_daemon_main.py  test_daemon_request_plumbing.py  test_daemon_request_store.py  test_daemon_scheduler.py  test_event_base.py  test_event_camera.py  test_event_loop.py  test_event_parity.py  test_event_policy.py  test_event_step.py  test_logs.py  test_loop.py  test_route_generator.py  test_runtime_integration_replay.py  test_step_context.py  test_validation.py  test_worker_ipc.py  test_worker_main.py  test_worker_pool.py
alpasim/src/runtime/tests/data/: valid_user_config.yaml
alpasim/src/runtime/tests/services/: test_controller_api.py  test_service_base_lifecycle.py
alpasim/src/tools/run-on-slurm/: resume_slurm_job.sh  submit.sh
alpasim/src/utils/: README.md  pyproject.toml
alpasim/src/utils/alpasim_utils/: artifact.py  geometry.py  paths.py  types.py  yaml_utils.py
alpasim/src/utils/alpasim_utils/asl_to_frames/: __main__.py
alpasim/src/utils/alpasim_utils/print_asl/: __main__.py
alpasim/src/utils/tests/: test_dynamic_trajectory.py  test_logs.py  test_paths_repo.py  test_yaml_utils.py
alpasim/src/utils/tests/asl_to_frames/: test_asl_to_frames.py
alpasim/src/utils_rs/: utils_rs.pyi
alpasim/src/utils_rs/src/: dynamic_trajectory.rs  lib.rs  polyline.rs  pose.rs  trajectory.rs
alpasim/src/wizard/: pyproject.toml
alpasim/src/wizard/alpasim_wizard/: check_config.py  configuration.py  context.py  s3_api.py  schema.py  services.py  setup_omegaconf.py  utils.py  wizard.py
alpasim/src/wizard/alpasim_wizard/deployment/: slurm.py
alpasim/src/wizard/alpasim_wizard/scenes/: __init__.py  csv_utils.py  sceneset.py
alpasim/src/wizard/configs/: base_config.yaml
alpasim/src/wizard/configs/cameras/: 1cam.yaml  2cam.yaml  2cam_1080.yaml  2cam_2168.yaml  2cam_4k.yaml  4cam_1080.yaml  wide_only_cam.yaml
alpasim/src/wizard/configs/deploy/: docker_build_only.yaml  local.yaml  local_2gpus.yaml  local_external_driver.yaml
alpasim/src/wizard/configs/driver/: alpamayo_runtime_configs.yaml  ar1.yaml  ar1_runtime_configs.yaml  manual.yaml  manual_runtime_configs.yaml  vavam.yaml  vavam_runtime_configs.yaml
alpasim/src/wizard/configs/exp/: vavam_4hz.yaml  vavam_4hz_eco.yaml
alpasim/src/wizard/configs/physics/: disabled.yaml
alpasim/src/wizard/tests/: test_loadable_config.py  test_repo_root_helpers.py  test_scene_csvs.py  test_sceneset.py
alpasim/tools/precommit/: insert_license_changed_only.py
dataset/: schema.py  (+2 more)
(+126 files in other folders)
