[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "alpasim_eval"
version = "1.36.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "pandas",
  "polars[all]",
  "seaborn",
  "seaborn-polars",
  "matplotlib",
  "papermill",
  "ipykernel",
  "alpasim_grpc",
  "alpasim_utils[geometry]",
  "omegaconf",
  "shapely",
  "trajdata-alpasim==1.4.3",
  "rich[jupyter]",
  "pytest",
  "csaps",
  "ipywidgets",
  "opencv-python-headless",
  "Pillow",
  "numpy",
  "termplotlib",
  "yappi",
  "dataclasses-json"
]

  [project.scripts]
  alpasim-eval = "eval.main:main"
  alpasim-aggregation = "eval.aggregation.main:main"
  alpasim-reeval = "eval.reeval:main"

[tool.uv.sources]
alpasim_grpc = {workspace = true}
alpasim_utils = {workspace = true}

[tool.uv.sources.trajdata-alpasim]
git = "https://github.com/NVlabs/trajdata"
branch = "alpasim"
