[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpasim_plugins"
version = "0.1.0"
description = "Plugin registry and discovery for Alpasim"
requires-python = ">=3.11,<3.13"
dependencies = []

[project.scripts]
alpasim-info = "alpasim_plugins.info:main"

[tool.setuptools.packages.find]
include = ["alpasim_plugins*"]
